inst/app/www/custom.css
/* fix for FixedColumns styling in Datasets tab */
.DTFC_RightWrapper {
    right: unset !important;
}


/* MDS plots */
.beside-downloadable {
    margin-top: 0px;
}

.mobile-margin {
    margin-top: 50px;
}

@media (min-width: 1200px) {
    .mobile-margin {
        margin-top: 0px;
    }
    .beside-downloadable {
        margin-top: 26px;
    }
}

.selectize-dropdown-content {
    max-height: 450px;
}


.dropdown-menu {
    width: 100%;
}


/* for showing cluster colour in dropdown */
.input-swatch {
    height: 10px;
    width: 10px;
    border: 1px solid #54575a;
    display: inline-block;
    margin-right: 5px;
}


/* swatch for Pathways plot L1000 label */
.pert-label .input-swatch {
    height: 6px;
    width: 6px;
    border: none;
    border-radius: 50%;
    margin-right: 5px;
    vertical-align: middle;
}

.pert-label .input-swatch.same {
    background-color: #f64f5a;
}

.pert-label .input-swatch.opposite {
    background-color: #1863e6;
}

.pert-label {
    display: none;
    color: #333;
    font-family: "Open Sans", verdana, arial, sans-serif;
    font-size: 14px;
}


/* swatch for label transfer in Single Cell page */
.circle-swatch {
    height: 8px;
    width: 8px;
    display: inline-block;
    border-radius: 50%;
    background-color: #5cb85c;
    margin-top: 6px;
    padding-top: 6px;
}

.ambience-swatch {
    height: 8px;
    width: 8px;
    display: inline-block;
    border-radius: 50%;
    background-color: #f0ad4e;
    margin-top: 6px;
    padding-top: 6px;
}

.form-control {
    /* remove ugly box shadow from inputs */
    box-shadow: inset 0px 0px 0px 0px red;
}


/* BRAND */

.brand-icons {
    background-color: white;
    padding: 5px 12px 5px 0px;
    cursor: pointer;
    color: #333;
    text-decoration: none !important;
}

.brand-icons img {
    width: 24px;
    height: 24px;
    margin-top: -3px;
}


/* NAVBAR */


/* allows for right-aligned tabs inside same ul tabset */
/* only way I could get it working with shiny */
ul.nav.navbar-nav {
    float: none;
}

.navbar-default {
    background-color: white;
}

.navbar {
    margin-bottom: 0px;
}


/* same box when active/active so that hover doesn't change height on mobile */
.navbar-nav>li>a {
    padding: 5px 12px;
    margin: 9px 2px;
    border: 1px solid transparent;
}

.navbar-default .navbar-nav>.active>a,
.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus,
.navbar-default .navbar-nav>li>a:hover {
    padding: 5px 12px;
    margin: 9px 2px;
    border: 1px solid #ccc;
    background-color: white;
    color: cornflowerblue;
    border-radius: 4px;
}

.navbar-default .navbar-nav>a:hover,
.navbar-default .navbar-nav>a:focus,
.navbar-default .navbar-nav>li>a:hover {
    border: 1px solid white;
}

.btn-group-justified .dropdown-toggle::after {
    content: ' ';
    display: block;
    position: absolute;
    top: 50%;
    right: 17px;
    margin-top: -3px;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 5px 5px 0 5px;
    border-color: #333333 transparent transparent transparent;
}



/* DATATABLES */

.well-form {
  max-width: 420px !important;
}

/* filter box */
td .form-group {
  min-height: unset !important;
}

thead tr:nth-child(2) td {
  padding: 0px 0.5px 10px;
}

thead tr:nth-child(2) input {
  border-radius: 0px;
}


.dt-fake-height {
    height: 1px;
}

td.dt-nopad {
    padding: 0px !important;
    height: 37px;
}

td.dt-nopad div {
    height: 100%;
    width: 100%;
    text-align: center;
}

td.dt-nopad span {
    display: inline-block;
    padding: 8px 10px;
    color: white;
}


/* table text on 1 line */
.dt-container {
    white-space: nowrap;
}

/* no overflow-y for drugs/bulk */
.dt-container .dataTables_scrollBody {
  overflow-y: hidden !important;
}


/* for contrast in bulk data */
.selectize-input>.bulk-item .contrast {
    display: inline-block;
    padding-left: 6px;
    padding-right: 3px;
    font-weight: 700;
}

.selectize-input>.bulk-item~.bulk-item .contrast {
    display: none;
}

.bulk-item.active {
    background-color: #428bca !important;
}

.bulk-item {
    background-color: white !important;
    margin-right: 0px !important;
}

input[type=text] {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
}


/* hide tooltips on mobile */
@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
    .tooltip {
        display: none !important;
    }
}


/* introjs button styling */
.btn-intro, .btn-intro:focus {
    border: 1px solid #ddd;
    padding: 6px 8px;
    border-radius: 2px;
    cursor: pointer;
    font-size: 13px;
    margin-right: -1px;
    background-color: slategray;
    color: white;
    border-style: dashed;

}

body {
  padding-right: 0px !important;
}

.btn-intro:hover:not(.disabled) {
    background: #fff;
    color: #333;
    border-color: transparent;
}

.btn-intro.disabled {
  opacity: .25;
  cursor: not-allowed;
}

.btn-intro i {
  text-align: center;
}

@media (max-width: 460px) {
  .hidden-xxs {
      display: none!important;
  }
}

.secondary-navbar {
  border-bottom: 1px solid #ddd;
  margin-bottom: 50px;
  padding: 15px;
  background-color: slategray;
}

.secondary-navbar-btn-group {
  margin-right: 15px;
  display: inline;
}

/* fixes for shinyWidgets dropdown (feedback button) */
.caret {
  display: none;
}

#feedback {
  border-style: dashed;
}

ul.dropdown-menu {
  margin-top: 23px;
  margin-left: -66px;
}


/*shinyFiles TODO: fix in shinypanel.css */
.sF-textChoice > .btn {
    min-height: inherit;
}

.sF-breadcrumps {
    width: calc(100% - 350px);
}


/*button focus */
.btn {
    outline: 0px !important;
}

.sF-breadcrumps {
    width: calc(100% - 350px);
}

/* stop progress from blocking */
.sF-modalContainer {
    z-index: 99999;
}


/*disable tooltips on mobile*/
@media only screen
and (min-device-width : 319px)
and (max-device-width : 1024px) {
    .tooltip {
        display: none !important;
    }
 }

/*disable option for selectize*/
.disabled-option {
    color: #aaa;
    cursor: not-allowed !important;
}


/*always show numeric input arrows*/
input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
   opacity: 1;
}

/* to allow vertical-align in columns */
@media (min-width: 768px) {
  .row-fluid {
    display: flex;
    align-items: flex-end;
  }
}


.fast-spin {
  -webkit-animation: fa-spin 1s infinite linear;
  animation: fa-spin 1s infinite linear;
}


@media (min-width: 768px) {
  .modal-dialog {
      width: 400px;
      margin: 30px auto;
  }
}

@media (min-width: 768px) {
  .modal-sm {
      width: 300px;
  }
}

